model creation working now

--- a/code/01-annotator_performance.ipynb
+++ b/code/01-annotator_performance.ipynb
@@ -6,16 +6,16 @@
    "id": "f60692f4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-25T15:48:42.339693Z",
-     "iopub.status.busy": "2024-03-25T15:48:42.338827Z",
-     "iopub.status.idle": "2024-03-25T15:48:44.131210Z",
-     "shell.execute_reply": "2024-03-25T15:48:44.130911Z"
+     "iopub.execute_input": "2024-03-26T09:26:04.348171Z",
+     "iopub.status.busy": "2024-03-26T09:26:04.347990Z",
+     "iopub.status.idle": "2024-03-26T09:26:30.357598Z",
+     "shell.execute_reply": "2024-03-26T09:26:30.357035Z"
     },
     "papermill": {
-     "duration": 1.810287,
-     "end_time": "2024-03-25T15:48:44.132175",
+     "duration": 26.015084,
+     "end_time": "2024-03-26T09:26:30.358609",
      "exception": false,
-     "start_time": "2024-03-25T15:48:42.321888",
+     "start_time": "2024-03-26T09:26:04.343525",
      "status": "completed"
     },
     "tags": []
@@ -25,20 +25,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- Project '~/git/PopBERT' loaded. [renv 1.0.5]\n"
+      "ℹ Using R 4.2.1 (lockfile was generated with R 4.3.3)\n",
+      "- Project '/gpfs/bwfor/home/st/st_st/st_ac138201/PopBERT' loaded. [renv 1.0.5]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- Project '~/git/PopBERT' loaded. [renv 1.0.5]\n"
+      "- The project is out-of-sync -- use `renv::status()` for details.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "renv took longer than expected (22 seconds) to activate the sandbox.\n",
+      "\n",
+      "The sandbox can be disabled by setting:\n",
+      "\n",
+      "    RENV_CONFIG_SANDBOX_ENABLED = FALSE\n",
+      "\n",
+      "within an appropriate start-up .Renviron file.\n",
+      "\n",
+      "See `?renv::config` for more details. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ℹ Using R 4.2.1 (lockfile was generated with R 4.3.3)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Project '/gpfs/bwfor/home/st/st_st/st_ac138201/PopBERT' loaded. [renv 1.0.5]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- The project is out-of-sync -- use `renv::status()` for details.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array(['/Users/lukas/git/PopBERT'], dtype='<U24')"
+       "array(['/gpfs/bwfor/home/st/st_st/st_ac138201/PopBERT'], dtype='<U45')"
       ]
      },
      "execution_count": 1,
@@ -57,16 +95,16 @@
    "id": "28be3638",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-25T15:48:44.135368Z",
-     "iopub.status.busy": "2024-03-25T15:48:44.135228Z",
-     "iopub.status.idle": "2024-03-25T15:48:45.161075Z",
-     "shell.execute_reply": "2024-03-25T15:48:45.160716Z"
+     "iopub.execute_input": "2024-03-26T09:26:30.365827Z",
+     "iopub.status.busy": "2024-03-26T09:26:30.365574Z",
+     "iopub.status.idle": "2024-03-26T09:26:34.298628Z",
+     "shell.execute_reply": "2024-03-26T09:26:34.298051Z"
     },
     "papermill": {
-     "duration": 1.028458,
-     "end_time": "2024-03-25T15:48:45.162105",
+     "duration": 3.93721,
+     "end_time": "2024-03-26T09:26:34.300002",
      "exception": false,
-     "start_time": "2024-03-25T15:48:44.133647",
+     "start_time": "2024-03-26T09:26:30.362792",
      "status": "completed"
     },
     "tags": []
@@ -95,16 +133,16 @@
    "id": "b95bd128",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-25T15:48:45.165115Z",
-     "iopub.status.busy": "2024-03-25T15:48:45.164992Z",
-     "iopub.status.idle": "2024-03-25T15:48:45.681956Z",
-     "shell.execute_reply": "2024-03-25T15:48:45.681635Z"
+     "iopub.execute_input": "2024-03-26T09:26:34.305943Z",
+     "iopub.status.busy": "2024-03-26T09:26:34.305630Z",
+     "iopub.status.idle": "2024-03-26T09:26:35.112132Z",
+     "shell.execute_reply": "2024-03-26T09:26:35.111612Z"
     },
     "papermill": {
-     "duration": 0.519696,
-     "end_time": "2024-03-25T15:48:45.683173",
+     "duration": 0.810619,
+     "end_time": "2024-03-26T09:26:35.113369",
      "exception": false,
-     "start_time": "2024-03-25T15:48:45.163477",
+     "start_time": "2024-03-26T09:26:34.302750",
      "status": "completed"
     },
     "tags": []
@@ -124,16 +162,16 @@
    "id": "a5acf656",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-25T15:48:45.686724Z",
-     "iopub.status.busy": "2024-03-25T15:48:45.686578Z",
-     "iopub.status.idle": "2024-03-25T15:48:45.689070Z",
-     "shell.execute_reply": "2024-03-25T15:48:45.688788Z"
+     "iopub.execute_input": "2024-03-26T09:26:35.119287Z",
+     "iopub.status.busy": "2024-03-26T09:26:35.118995Z",
+     "iopub.status.idle": "2024-03-26T09:26:35.122988Z",
+     "shell.execute_reply": "2024-03-26T09:26:35.122629Z"
     },
     "papermill": {
-     "duration": 0.005445,
-     "end_time": "2024-03-25T15:48:45.690204",
+     "duration": 0.007753,
+     "end_time": "2024-03-26T09:26:35.123907",
      "exception": false,
-     "start_time": "2024-03-25T15:48:45.684759",
+     "start_time": "2024-03-26T09:26:35.116154",
      "status": "completed"
     },
     "tags": []
@@ -157,16 +195,16 @@
    "id": "f9c51423",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-25T15:48:45.693534Z",
-     "iopub.status.busy": "2024-03-25T15:48:45.693403Z",
-     "iopub.status.idle": "2024-03-25T15:48:45.980689Z",
-     "shell.execute_reply": "2024-03-25T15:48:45.980349Z"
+     "iopub.execute_input": "2024-03-26T09:26:35.129055Z",
+     "iopub.status.busy": "2024-03-26T09:26:35.128767Z",
+     "iopub.status.idle": "2024-03-26T09:26:35.691257Z",
+     "shell.execute_reply": "2024-03-26T09:26:35.690634Z"
     },
     "papermill": {
-     "duration": 0.290278,
-     "end_time": "2024-03-25T15:48:45.981941",
+     "duration": 0.566386,
+     "end_time": "2024-03-26T09:26:35.692526",
      "exception": false,
-     "start_time": "2024-03-25T15:48:45.691663",
+     "start_time": "2024-03-26T09:26:35.126140",
      "status": "completed"
     },
     "tags": []
@@ -183,16 +221,16 @@
    "id": "000d581f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-25T15:48:45.985587Z",
-     "iopub.status.busy": "2024-03-25T15:48:45.985447Z",
-     "iopub.status.idle": "2024-03-25T15:48:45.987932Z",
-     "shell.execute_reply": "2024-03-25T15:48:45.987508Z"
+     "iopub.execute_input": "2024-03-26T09:26:35.698422Z",
+     "iopub.status.busy": "2024-03-26T09:26:35.698166Z",
+     "iopub.status.idle": "2024-03-26T09:26:35.702212Z",
+     "shell.execute_reply": "2024-03-26T09:26:35.701857Z"
     },
     "papermill": {
-     "duration": 0.005621,
-     "end_time": "2024-03-25T15:48:45.989144",
+     "duration": 0.008155,
+     "end_time": "2024-03-26T09:26:35.703222",
      "exception": false,
-     "start_time": "2024-03-25T15:48:45.983523",
+     "start_time": "2024-03-26T09:26:35.695067",
      "status": "completed"
     },
     "tags": []
@@ -216,16 +254,16 @@
    "id": "dbb60937",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-25T15:48:45.992677Z",
-     "iopub.status.busy": "2024-03-25T15:48:45.992534Z",
-     "iopub.status.idle": "2024-03-25T15:48:45.995905Z",
-     "shell.execute_reply": "2024-03-25T15:48:45.995657Z"
+     "iopub.execute_input": "2024-03-26T09:26:35.708316Z",
+     "iopub.status.busy": "2024-03-26T09:26:35.708081Z",
+     "iopub.status.idle": "2024-03-26T09:26:35.713486Z",
+     "shell.execute_reply": "2024-03-26T09:26:35.713143Z"
     },
     "papermill": {
-     "duration": 0.006067,
-     "end_time": "2024-03-25T15:48:45.996719",
+     "duration": 0.008991,
+     "end_time": "2024-03-26T09:26:35.714409",
      "exception": false,
-     "start_time": "2024-03-25T15:48:45.990652",
+     "start_time": "2024-03-26T09:26:35.705418",
      "status": "completed"
     },
     "tags": []
@@ -263,16 +301,16 @@
    "id": "b8c8cbcc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-25T15:48:45.999818Z",
-     "iopub.status.busy": "2024-03-25T15:48:45.999712Z",
-     "iopub.status.idle": "2024-03-25T15:48:46.001514Z",
-     "shell.execute_reply": "2024-03-25T15:48:46.001285Z"
+     "iopub.execute_input": "2024-03-26T09:26:35.719617Z",
+     "iopub.status.busy": "2024-03-26T09:26:35.719391Z",
+     "iopub.status.idle": "2024-03-26T09:26:35.722597Z",
+     "shell.execute_reply": "2024-03-26T09:26:35.722255Z"
     },
     "papermill": {
-     "duration": 0.00424,
-     "end_time": "2024-03-25T15:48:46.002295",
+     "duration": 0.006887,
+     "end_time": "2024-03-26T09:26:35.723512",
      "exception": false,
-     "start_time": "2024-03-25T15:48:45.998055",
+     "start_time": "2024-03-26T09:26:35.716625",
      "status": "completed"
     },
     "tags": []
@@ -295,10 +333,10 @@
    "id": "75c4caf9",
    "metadata": {
     "papermill": {
-     "duration": 0.001118,
-     "end_time": "2024-03-25T15:48:46.004532",
+     "duration": 0.002126,
+     "end_time": "2024-03-26T09:26:35.727924",
      "exception": false,
-     "start_time": "2024-03-25T15:48:46.003414",
+     "start_time": "2024-03-26T09:26:35.725798",
      "status": "completed"
     },
     "tags": []
@@ -313,16 +351,16 @@
    "id": "59183526",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-25T15:48:46.007278Z",
-     "iopub.status.busy": "2024-03-25T15:48:46.007176Z",
-     "iopub.status.idle": "2024-03-25T15:48:49.688266Z",
-     "shell.execute_reply": "2024-03-25T15:48:49.687838Z"
+     "iopub.execute_input": "2024-03-26T09:26:35.732889Z",
+     "iopub.status.busy": "2024-03-26T09:26:35.732620Z",
+     "iopub.status.idle": "2024-03-26T09:26:42.444693Z",
+     "shell.execute_reply": "2024-03-26T09:26:42.444080Z"
     },
     "papermill": {
-     "duration": 3.683627,
-     "end_time": "2024-03-25T15:48:49.689314",
+     "duration": 6.716013,
+     "end_time": "2024-03-26T09:26:42.446024",
      "exception": false,
-     "start_time": "2024-03-25T15:48:46.005687",
+     "start_time": "2024-03-26T09:26:35.730011",
      "status": "completed"
     },
     "tags": []
@@ -354,16 +392,16 @@
    "id": "73cdd079",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-25T15:48:49.692354Z",
-     "iopub.status.busy": "2024-03-25T15:48:49.692238Z",
-     "iopub.status.idle": "2024-03-25T15:48:50.109354Z",
-     "shell.execute_reply": "2024-03-25T15:48:50.109098Z"
+     "iopub.execute_input": "2024-03-26T09:26:42.453342Z",
+     "iopub.status.busy": "2024-03-26T09:26:42.453105Z",
+     "iopub.status.idle": "2024-03-26T09:26:43.215473Z",
+     "shell.execute_reply": "2024-03-26T09:26:43.215036Z"
     },
     "papermill": {
-     "duration": 0.419498,
-     "end_time": "2024-03-25T15:48:50.110196",
+     "duration": 0.766455,
+     "end_time": "2024-03-26T09:26:43.216466",
      "exception": false,
-     "start_time": "2024-03-25T15:48:49.690698",
+     "start_time": "2024-03-26T09:26:42.450011",
      "status": "completed"
     },
     "tags": []
@@ -533,10 +571,10 @@
    "id": "c86d425a",
    "metadata": {
     "papermill": {
-     "duration": 0.001232,
-     "end_time": "2024-03-25T15:48:50.112806",
+     "duration": 0.002322,
+     "end_time": "2024-03-26T09:26:43.221387",
      "exception": false,
-     "start_time": "2024-03-25T15:48:50.111574",
+     "start_time": "2024-03-26T09:26:43.219065",
      "status": "completed"
     },
     "tags": []
@@ -551,16 +589,16 @@
    "id": "995f1128",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-25T15:48:50.115709Z",
-     "iopub.status.busy": "2024-03-25T15:48:50.115527Z",
-     "iopub.status.idle": "2024-03-25T15:48:50.119736Z",
-     "shell.execute_reply": "2024-03-25T15:48:50.119523Z"
+     "iopub.execute_input": "2024-03-26T09:26:43.226775Z",
+     "iopub.status.busy": "2024-03-26T09:26:43.226566Z",
+     "iopub.status.idle": "2024-03-26T09:26:43.239518Z",
+     "shell.execute_reply": "2024-03-26T09:26:43.239122Z"
     },
     "papermill": {
-     "duration": 0.006602,
-     "end_time": "2024-03-25T15:48:50.120572",
+     "duration": 0.016686,
+     "end_time": "2024-03-26T09:26:43.240444",
      "exception": false,
-     "start_time": "2024-03-25T15:48:50.113970",
+     "start_time": "2024-03-26T09:26:43.223758",
      "status": "completed"
     },
     "tags": []
@@ -570,7 +608,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/c4/s_gcwpvj6ks305sydyy9m00h0000gn/T/ipykernel_74018/560252390.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
+      "/scratch/st_ac138201/job_2947832_o04c04/ipykernel_3978127/560252390.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
       "  tab.to_latex(src.PATH / \"results/tables/coder_agreement.tex\", index=False, escape=False)\n"
      ]
     }
@@ -585,10 +623,10 @@
    "id": "fbf312d8",
    "metadata": {
     "papermill": {
-     "duration": 0.001192,
-     "end_time": "2024-03-25T15:48:50.123057",
+     "duration": 0.002321,
+     "end_time": "2024-03-26T09:26:43.245222",
      "exception": false,
-     "start_time": "2024-03-25T15:48:50.121865",
+     "start_time": "2024-03-26T09:26:43.242901",
      "status": "completed"
     },
     "tags": []
@@ -613,18 +651,18 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.12"
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 9.178081,
-   "end_time": "2024-03-25T15:48:50.542035",
+   "duration": 41.323083,
+   "end_time": "2024-03-26T09:26:43.963939",
    "environment_variables": {},
    "exception": null,
    "input_path": "code/01-annotator_performance.ipynb",
    "output_path": "code/01-annotator_performance.ipynb",
    "parameters": {},
-   "start_time": "2024-03-25T15:48:41.363954",
+   "start_time": "2024-03-26T09:26:02.640856",
    "version": "2.5.0"
   }
  },
