prepare more steps

--- a/data_scripts/01-raw_sentences.ipynb
+++ b/data_scripts/01-raw_sentences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,11 +36,17 @@
     "        .join(od.Speech)\n",
     "        .join(od.Politician)\n",
     "        .join(od.Faction)\n",
-    "        .filter(od.Speech.electoral_term.in_([18, 19]))\n",
+    "        .filter(\n",
+    "            od.Speech.electoral_term.in_([18, 19]),\n",
+    "            od.Faction.abbreviation != \"Fraktionslos\",\n",
+    "        )\n",
     "        .with_entities(\n",
     "            bm.Sample.id.label(\"sample_id\"),\n",
     "            bm.Sample.speeches_id.label(\"speech_id\"),\n",
     "            od.Speech.date,\n",
+    "            od.Speech.session,\n",
+    "            od.Speech.electoral_term,\n",
+    "            od.Politician.id.label(\"politician_id\"),\n",
     "            od.Politician.first_name,\n",
     "            od.Politician.last_name,\n",
     "            od.Faction.abbreviation,\n",
@@ -48,16 +54,19 @@
     "            bm.Sample.sentence_length,\n",
     "            bm.Sample.text,\n",
     "        )\n",
+    "        .order_by(bm.Sample.id.asc())\n",
     "        .distinct()\n",
     "    )\n",
     "\n",
     "with engine.connect() as conn:\n",
-    "    df = pd.read_sql(query.statement, conn)"
+    "    df = pd.read_sql(query.statement, conn)\n",
+    "\n",
+    "df.abbreviation = df.abbreviation.replace({\"DIE LINKE.\": \"DIE LINKE\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +90,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
