run selected examples

--- a/code/08-selected_examples_table.ipynb
+++ b/code/08-selected_examples_table.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b2d01208",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-03-27T18:43:05.162561Z",
+     "iopub.status.busy": "2024-03-27T18:43:05.161614Z",
+     "iopub.status.idle": "2024-03-27T18:43:05.637483Z",
+     "shell.execute_reply": "2024-03-27T18:43:05.637104Z"
+    },
+    "papermill": {
+     "duration": 0.489081,
+     "end_time": "2024-03-27T18:43:05.638574",
+     "exception": false,
+     "start_time": "2024-03-27T18:43:05.149493",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -15,9 +30,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "f6939b2a",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-03-27T18:43:05.640966Z",
+     "iopub.status.busy": "2024-03-27T18:43:05.640819Z",
+     "iopub.status.idle": "2024-03-27T18:43:05.642554Z",
+     "shell.execute_reply": "2024-03-27T18:43:05.642324Z"
+    },
+    "papermill": {
+     "duration": 0.003773,
+     "end_time": "2024-03-27T18:43:05.643399",
+     "exception": false,
+     "start_time": "2024-03-27T18:43:05.639626",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "pd.set_option(\"display.max_colwidth\", None)"
@@ -27,16 +57,40 @@
    "attachments": {},
    "cell_type": "markdown",
    "id": "a78889d7-6cf2-4f02-ba46-59290ab3c448",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.000805,
+     "end_time": "2024-03-27T18:43:05.645033",
+     "exception": false,
+     "start_time": "2024-03-27T18:43:05.644228",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "# Load data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "004391a7",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-03-27T18:43:05.647045Z",
+     "iopub.status.busy": "2024-03-27T18:43:05.646939Z",
+     "iopub.status.idle": "2024-03-27T18:43:06.694238Z",
+     "shell.execute_reply": "2024-03-27T18:43:06.693878Z"
+    },
+    "papermill": {
+     "duration": 1.049367,
+     "end_time": "2024-03-27T18:43:06.695214",
+     "exception": false,
+     "start_time": "2024-03-27T18:43:05.645847",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "df = pd.read_parquet(src.PATH / \"data/raw/sentences.parquet.gzip\")\n",
@@ -50,9 +104,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "ab25ac4c",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-03-27T18:43:06.697530Z",
+     "iopub.status.busy": "2024-03-27T18:43:06.697426Z",
+     "iopub.status.idle": "2024-03-27T18:43:06.699142Z",
+     "shell.execute_reply": "2024-03-27T18:43:06.698907Z"
+    },
+    "papermill": {
+     "duration": 0.00372,
+     "end_time": "2024-03-27T18:43:06.699984",
+     "exception": false,
+     "start_time": "2024-03-27T18:43:06.696264",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "thresh = {\"elite\": 0.415961, \"pplcentr\": 0.295400, \"left\": 0.429109, \"right\": 0.302714}"
@@ -60,9 +129,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "8f177349",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-03-27T18:43:06.702275Z",
+     "iopub.status.busy": "2024-03-27T18:43:06.702161Z",
+     "iopub.status.idle": "2024-03-27T18:43:06.703978Z",
+     "shell.execute_reply": "2024-03-27T18:43:06.703757Z"
+    },
+    "papermill": {
+     "duration": 0.003866,
+     "end_time": "2024-03-27T18:43:06.704753",
+     "exception": false,
+     "start_time": "2024-03-27T18:43:06.700887",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "elite_ids = (\"Anti-Elitism\", [421345, 288335, 1033085])\n",
@@ -72,9 +156,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "4d5b230c",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-03-27T18:43:06.706865Z",
+     "iopub.status.busy": "2024-03-27T18:43:06.706698Z",
+     "iopub.status.idle": "2024-03-27T18:43:06.797365Z",
+     "shell.execute_reply": "2024-03-27T18:43:06.797029Z"
+    },
+    "papermill": {
+     "duration": 0.09274,
+     "end_time": "2024-03-27T18:43:06.798335",
+     "exception": false,
+     "start_time": "2024-03-27T18:43:06.705595",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "results = []\n",
@@ -105,9 +204,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "id": "ac5df716",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-03-27T18:43:06.800623Z",
+     "iopub.status.busy": "2024-03-27T18:43:06.800517Z",
+     "iopub.status.idle": "2024-03-27T18:43:06.807083Z",
+     "shell.execute_reply": "2024-03-27T18:43:06.806832Z"
+    },
+    "papermill": {
+     "duration": 0.00856,
+     "end_time": "2024-03-27T18:43:06.807908",
+     "exception": false,
+     "start_time": "2024-03-27T18:43:06.799348",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -164,7 +278,7 @@
        "      <td>0.02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1033084</th>\n",
+       "      <th>1032106</th>\n",
        "      <td>Anti-Elitism</td>\n",
        "      <td>3</td>\n",
        "      <td>\\parbox[t]{7cm}{Für uns ist dies ein richtiger und notwendiger Schritt, er ist erforderlich, und wir sehen noch Nachholbedarf: 42,9 Milliarden Euro in 2019 und 60 Milliarden Euro in 2023.}</td>\n",
@@ -197,7 +311,7 @@
        "      <td>0.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1087336</th>\n",
+       "      <th>1086045</th>\n",
        "      <td>People-Centrism</td>\n",
        "      <td>6</td>\n",
        "      <td>\\parbox[t]{7cm}{Wir machen konkrete Politik für die ganz konkreten Probleme der Menschen.}</td>\n",
@@ -208,7 +322,7 @@
        "      <td>0.02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1064157</th>\n",
+       "      <th>1062960</th>\n",
        "      <td>Populism</td>\n",
        "      <td>7</td>\n",
        "      <td>\\parbox[t]{7cm}{Für Mieterinnen und Mieter kommt diese Tatenlosigkeit der Regierung wirklich teuer.}</td>\n",
@@ -219,7 +333,7 @@
        "      <td>0.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1091031</th>\n",
+       "      <th>1089687</th>\n",
        "      <td>Populism</td>\n",
        "      <td>8</td>\n",
        "      <td>\\parbox[t]{7cm}{Das ist Klassenkampf von oben, das ist Klassenkampf im Interesse von Vermögenden und Besitzenden gegen die Mehrheit der Steuerzahlerinnen und Steuerzahler auf dieser Erde.}</td>\n",
@@ -230,7 +344,7 @@
        "      <td>0.02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1195879</th>\n",
+       "      <th>1193504</th>\n",
        "      <td>Populism</td>\n",
        "      <td>9</td>\n",
        "      <td>\\parbox[t]{7cm}{Sie sind jene, die den Gender Pay Gap vergrößern, indem Sie die armen deutschen Rentnerinnen mit Füßen treten, während Sie den Asylbewerbern, die hauptsächlich jung und männlich sind, das Geld in den Rachen werfen.}</td>\n",
@@ -248,38 +362,38 @@
        "               Dimension  ID  \\\n",
        "288334      Anti-Elitism   1   \n",
        "421344      Anti-Elitism   2   \n",
-       "1033084     Anti-Elitism   3   \n",
+       "1032106     Anti-Elitism   3   \n",
        "231292   People-Centrism   4   \n",
        "575680   People-Centrism   5   \n",
-       "1087336  People-Centrism   6   \n",
-       "1064157         Populism   7   \n",
-       "1091031         Populism   8   \n",
-       "1195879         Populism   9   \n",
+       "1086045  People-Centrism   6   \n",
+       "1062960         Populism   7   \n",
+       "1089687         Populism   8   \n",
+       "1193504         Populism   9   \n",
        "\n",
        "                                                                                                                                                                                                                                            Text  \\\n",
        "288334                                                                                                               \\parbox[t]{7cm}{Die Deregulierung der Finanzmärkte hat doch erst die Dollarzeichen in die Augen der Spekulanten gezaubert.}   \n",
        "421344                                                                                                                                                   \\parbox[t]{7cm}{Die Opposition befindet sich intellektuell bereits in der Sommerpause.}   \n",
-       "1033084                                             \\parbox[t]{7cm}{Für uns ist dies ein richtiger und notwendiger Schritt, er ist erforderlich, und wir sehen noch Nachholbedarf: 42,9 Milliarden Euro in 2019 und 60 Milliarden Euro in 2023.}   \n",
+       "1032106                                             \\parbox[t]{7cm}{Für uns ist dies ein richtiger und notwendiger Schritt, er ist erforderlich, und wir sehen noch Nachholbedarf: 42,9 Milliarden Euro in 2019 und 60 Milliarden Euro in 2023.}   \n",
        "231292                                                 \\parbox[t]{7cm}{Ein Syrer mit 4 Frauen und 23 Kindern kostet den deutschen Steuerzahler schon jetzt im Jahr 400 000 Euro Alimentierung, ohne je einen einzigen Cent eingezahlt zu haben.}   \n",
        "575680                                                          \\parbox[t]{7cm}{Wir fordern für diese Menschen nicht irgendwelche sozialpolitischen Maßnahmen, sondern wir fordern: Schluss mit der dauerhaften gesellschaftlichen Ausgrenzung!}   \n",
-       "1087336                                                                                                                                               \\parbox[t]{7cm}{Wir machen konkrete Politik für die ganz konkreten Probleme der Menschen.}   \n",
-       "1064157                                                                                                                                     \\parbox[t]{7cm}{Für Mieterinnen und Mieter kommt diese Tatenlosigkeit der Regierung wirklich teuer.}   \n",
-       "1091031                                             \\parbox[t]{7cm}{Das ist Klassenkampf von oben, das ist Klassenkampf im Interesse von Vermögenden und Besitzenden gegen die Mehrheit der Steuerzahlerinnen und Steuerzahler auf dieser Erde.}   \n",
-       "1195879  \\parbox[t]{7cm}{Sie sind jene, die den Gender Pay Gap vergrößern, indem Sie die armen deutschen Rentnerinnen mit Füßen treten, während Sie den Asylbewerbern, die hauptsächlich jung und männlich sind, das Geld in den Rachen werfen.}   \n",
+       "1086045                                                                                                                                               \\parbox[t]{7cm}{Wir machen konkrete Politik für die ganz konkreten Probleme der Menschen.}   \n",
+       "1062960                                                                                                                                     \\parbox[t]{7cm}{Für Mieterinnen und Mieter kommt diese Tatenlosigkeit der Regierung wirklich teuer.}   \n",
+       "1089687                                             \\parbox[t]{7cm}{Das ist Klassenkampf von oben, das ist Klassenkampf im Interesse von Vermögenden und Besitzenden gegen die Mehrheit der Steuerzahlerinnen und Steuerzahler auf dieser Erde.}   \n",
+       "1193504  \\parbox[t]{7cm}{Sie sind jene, die den Gender Pay Gap vergrößern, indem Sie die armen deutschen Rentnerinnen mit Füßen treten, während Sie den Asylbewerbern, die hauptsächlich jung und männlich sind, das Geld in den Rachen werfen.}   \n",
        "\n",
        "         Gründl (2022)  elite  centr  left  right  \n",
        "288334               1   0.96   0.02  0.97   0.02  \n",
        "421344               0   0.89   0.00  0.01   0.02  \n",
-       "1033084              0   0.01   0.01  0.00   0.00  \n",
+       "1032106              0   0.01   0.01  0.00   0.00  \n",
        "231292               0   0.06   0.90  0.19   0.71  \n",
        "575680               0   0.00   0.68  0.72   0.01  \n",
-       "1087336              0   0.00   0.90  0.07   0.02  \n",
-       "1064157              0   0.99   0.13  0.08   0.01  \n",
-       "1091031              1   0.88   0.35  0.98   0.02  \n",
-       "1195879              0   0.96   0.68  0.10   0.98  "
+       "1086045              0   0.00   0.90  0.07   0.02  \n",
+       "1062960              0   0.99   0.13  0.08   0.01  \n",
+       "1089687              1   0.88   0.35  0.98   0.02  \n",
+       "1193504              0   0.96   0.68  0.10   0.98  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,15 +404,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "id": "c76d0180",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-03-27T18:43:06.810268Z",
+     "iopub.status.busy": "2024-03-27T18:43:06.810176Z",
+     "iopub.status.idle": "2024-03-27T18:43:06.816271Z",
+     "shell.execute_reply": "2024-03-27T18:43:06.816065Z"
+    },
+    "papermill": {
+     "duration": 0.008132,
+     "end_time": "2024-03-27T18:43:06.817052",
+     "exception": false,
+     "start_time": "2024-03-27T18:43:06.808920",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_58688/2533246234.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
+      "/var/folders/c4/s_gcwpvj6ks305sydyy9m00h0000gn/T/ipykernel_19557/2533246234.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
       "  sample_df.to_latex(src.PATH / \"results/tables/selected_examples.tex\", index=False, escape=False)\n"
      ]
     }
@@ -311,7 +440,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b106b728",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.000969,
+     "end_time": "2024-03-27T18:43:06.819062",
+     "exception": false,
+     "start_time": "2024-03-27T18:43:06.818093",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": []
   }
@@ -332,7 +470,19 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.18"
+  },
+  "papermill": {
+   "default_parameters": {},
+   "duration": 2.741981,
+   "end_time": "2024-03-27T18:43:07.036100",
+   "environment_variables": {},
+   "exception": null,
+   "input_path": "code/08-selected_examples_table.ipynb",
+   "output_path": "code/08-selected_examples_table.ipynb",
+   "parameters": {},
+   "start_time": "2024-03-27T18:43:04.294119",
+   "version": "2.5.0"
   }
  },
  "nbformat": 4,
